refactor: css imports

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&display=swap');
+@import 'tailwindcss/tailwind.css';
+@import 'antd/dist/antd.css';
 
 body {
     font-family: 'Montserrat', sans-serif;
