--- a/styles/main.css
+++ b/styles/main.css
@@ -27,6 +27,8 @@ html {
 }
 
 .animation-page-container-enter {
+    width: 100%;
+    height: 100%;
     opacity: 0;
     /* right: 0; */
 }
@@ -47,4 +49,9 @@ html {
     /* transform: translateX(-200%); */
     transition: opacity 500ms ease-in;
     /* transition: transform 0.5s ease; */
+}
+
+.max-width-container {
+    max-width: 24rem;
+    min-width: 22rem;
 }
