--- a/styles/main.css
+++ b/styles/main.css
@@ -26,29 +26,69 @@ html {
     height: 100%;
 }
 
-.animation-page-container-enter {
+.wrapper {
+    /* position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: 100%; */
+}
+
+/* #slide,
+.animation-page-container {
+    position: absolute;
+    left: -100vw;
     width: 100%;
     height: 100%;
+    transition: 1s;
+} */
+
+/* .wrapper:hover #slide {
+    transition: 1s;
+    left: 0;
+} */
+
+.animation-page-container-enter {
+    /* position: absolute;
+    left: -100vw;
+    width: 100%;
+    height: 100%;
+    transition: 1s; */
+    right: -100vw;
     opacity: 0;
-    /* right: 0; */
 }
+
 .animation-page-container-enter-active {
+    /* opacity: 1;
+    transition: opacity 500ms ease-in; */
+    /* transition: 1s;
+    left: 0; */
+    right: 0;
     opacity: 1;
-    transition: opacity 500ms ease-in;
+    position: relative;
+    transition: 0.5s;
 
     /* transition: transform 0.8s ease; */
-    /* transform: translateX(-100%);
-    -webkit-transform: translateX(-100%); */
+    /* transform: translateX(-100%); */
+    /* -webkit-transform: translateX(-100%); */
 }
+
 .animation-page-container-exit {
-    opacity: 1;
-    /* transform: translateX(-200%); */
+    /* opacity: 1;
+    transform: translateX(-200%); */
+    /* position: absolute;
+    left: -100vw;
+    width: 100%;
+    height: 100%;
+    transition: 1.5s; */
 }
+
 .animation-page-container-exit-active {
-    opacity: 0;
-    /* transform: translateX(-200%); */
+    /* opacity: 0;
+    transform: translateX(-200%);
     transition: opacity 500ms ease-in;
-    /* transition: transform 0.5s ease; */
+    transition: transform 0.5s ease; */
+    /* transition: 1s;
+    left: 0; */
 }
 
 .max-width-container {
